1.20.1 port, cluster c4: rendering / client / HUD / access widener
Client, render, GUI and client-mixin code moved to the 1.20.1 (Yarn 1.20.1+build.1) API,
loader-neutral in common/ (no Fabric API in common), Fabric API 0.92 + Forge 47 wiring.

- Entity tint: ModelPartMixin re-expressed on the four float color args of
  ModelPart.renderCuboids (per-channel @ModifyVariable, ordinal 0-3); ArmorTrimsLayerTintMixin
  targets the no-arg TexturedRenderLayers.getArmorTrims(); LivingEntity.getScale() sites dropped
  (no scale attribute on 1.20.1).
- HUD: InGameHudMixin keeps only the offhand @WrapOperation, retargeted to renderHotbar; the HUD
  itself is drawn from HudRenderCallback (Fabric) / RegisterGuiOverlaysEvent above HOTBAR (Forge).
  Spell hotbar background reads the monolithic textures/gui/widgets.png atlas (legacy coordinates).
- Custom item models: ITEM_MODEL read from NBT (getSubNbt("spell_engine") -> "item_model");
  additional models looked up by plain Identifier through a new BakedModelManagerAccessor on
  both loaders (no ModelIdentifier.standalone / Fabric-only getModel(Identifier)).
- Item glow: ImmediateItemGlowMixin on Map<RenderLayer, BufferBuilder>; ItemGlowVertexConsumer on the
  1.20.1 VertexConsumer contract (vertex(double...), next, fixedColor/unfixColor).
- Particles: SpellParticle emits oriented quads by hand (no BillboardParticle.Rotator on 1.20.1).
- Tooltips: TooltipType -> TooltipContext; effect tokens read StatusEffect.getAttributeModifiers +
  adjustModifierAmount; ItemStackTooltipAccessor (1.21-only invoker) replaced by
  client/gui/AttributeModifierTooltip (vanilla 1.20.1 attribute-line formatting).
- Screens: renderBackground(DrawContext), CheckboxWidget ctor, renderButton, 3-arg mouseScrolled;
  SpellChoiceScreenHandler off data components (apply_on_choice dropped per port decision).
- Iris 1.6.x package (net.coderbot.batchedentityrendering.impl); LambDynamicLights 2.3 entrypoint.
- Access widener re-descriptored for 1.20.1 and validate